Example-Application(Employee)/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deploy
spec:
  selector:
    matchLabels:
      app: employee-be
  template:
    metadata:
      labels:
        app: employee-be
    spec:
      containers:
      - name: cont-1
        image: avinashg0/employee:be-9
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m 
            memory: 50Mi 
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  type: ClusterIP
  selector:
    app: employee-be
  ports:
  - port: 80
    targetPort: 3000
