Example-Application(Employee)/k8s/ingress.yml
# ===========================
# INGRESS
# ===========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Backend API versioned
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: be-service
            port:
              number: 80
      # Frontend catch-all
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fe-service
            port:
              number: 80
